# PS-OCTA-OCE-Robot

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  Control 3.ctl  LICENSE  PS-OCTA-OCE-autofocus.vi  README.md  compile_commands.json  docker-compose.yml  launch.sh  launch_3d.sh  package.xml  reset.sh
AlazarDll/: AlazarAbortAsyncRead.vi  AlazarAbortCapture.vi  AlazarBeforeAsyncRead.vi  AlazarConfigureAuxIO.vi  AlazarErrorClusterToCode.vi  AlazarErrorCodeToCluster.vi  AlazarGetBoardBySystemId.vi  AlazarGetParameter.vi  AlazarInputControl.vi  AlazarOCTIgnoreBadClock.vi  AlazarSamplesPerBuffer.vi  AlazarSetCaptureClock.vi  AlazarSetExternalTrigger.vi  AlazarSetParameterUL.vi  AlazarSetRecordSize.vi  AlazarSetTriggerDelay.vi  AlazarSetTriggerOperation.vi  AlazarSetTriggerTimeOut.vi  AlazarStartCapture.vi  AlazarWaitNextAsyncBufferCompleteI16.vi  ORS_AlazarDLLAcq_Prepare.vi  ORS_AlazarDLLAcq_Start.vi  ORS_AlazarDLLAcq_Xfer.vi  ORS_AlazarDLLAcq_XferLatestFrame.vi  ORS_AlazarDLLCfg_All.vi  ORS_AlazarDLLDigitalOut.vi  ORS_Alazar_acquire_multiple_frames_galvo.vi  ORS_get_alazar_acquisition_DLL_path.vi
CAD/: READ_ME.txt
CAD/3D printing files/: Casing_final_hopefully.3mf  ceramic_holder_v7.3mf
CAD/Fusion360/: Casing_final_hopefully.f3d  Chassis.f3d  Galvo chassis.f3d  (+1 more)
Datafile/: ORS_DatafileClose.vi  ORS_DatafileWriteData-v2.vi  ORS_DatafileWriteReadHeader_OCE.vi
Galvo/: ORS_GalvoCleanupScan.vi  ORS_GalvoClose.vi  ORS_GalvoConfig1D_uw.vi  ORS_GalvoConfig2D_uw.vi  ORS_GalvoConfig3D_v2.vi  ORS_GalvoForceToZero_uw.vi  ORS_GalvoGenScanData3D_uw.vi  ORS_GalvoInit2_uw.vi  ORS_GalvoPrepareScan_uw-1kp.vi  ORS_GalvoPrepareScan_uw-1kp_Duo.vi  ORS_GalvoStartScan.vi  PSOCE_Protocol.vi  PSOCE_Protocol_Original.vi
ImagingStates/: SSOCT.octcfg  SSOCT_2023.05.24.octcfg  SSOCT_2525_R4V2.octcfg
Insight/: Start_Sweep_Trigger.ctl
Robot/: robot_focus.vi
Sub/: CCDImageHL.vi  FFT_filter.vi  Insight_Valid_Vector_Clock_Transform.vi  ORS-ColorTable2ColorMapDataString.vi  ORS-PathAddTimestamp.vi  ORS_CursorToCropIdx.vi  ORS_CursorToCropIdxRel.vi  ORS_DrawFlattenedPixmap8.vi  ORS_Fit_Recalibration_Fringes.vi  ORS_Fit_Recalibration_Fringes_Jay.vi  ORS_ImgQuickRecaForConfig_DVV.vi  ORS_Insight_Read_Laser_Parameters_from_File.vi  ORS_Insight_Reduce_B-scan_Data.vi  ORS_Insight_Reduce_Data_with_Valid-Vector.vi  ORS_InvertFunction.vi  ORS_LinearizeFFTSingleLine.vi  ORS_PathAddExtension.vi  ORS_PathAddNumber_noExt.vi  ORS_Phase_Compensation_Fringes.vi  ORS_UW_ImgGen.vi  ORS_WW-LinearizeFFTLineArray.vi  ORS_WW-RampInt32.vi  ORS_linearize_Hilbert.vi  ORS_sinc_interpol.vi  ORS_timestamp.vi  eye leveling.vi
Typedefs/: OCT_F_state.ctl  ORS_Galvo.ctl  ORS_Galvo_params.ctl  ORS_Parameter_Cluster_v8.ctl  ORS_Per_Ch_params.ctl
VI/: config_save_state.vi  serial_read_write.vi
action/: Focus.action  Freedrive.action  FullScan.action  MoveZAngle.action  Reset.action
config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  psd.yml
difftool/: lvcompareWrapper.sh  lvmergeWrapper.sh
docker/: Dockerfile  docker-compose.yaml
launch/: launch.py  launch_new.py  launch_old.py  reset.py
matlab_scripts/: cal_rot.m  com_robot.mat  com_robot_savepoint.mat  rot_robot.m
misc/: ORS_AlazarDLLAcq_XferLatestFrame222.vi  RTI Connext DDS Read String.vi  RTI Connext DDS Write String.vi  _LaunchHelp.vi
msg/: Img.msg  Labviewdata.msg  Robotdata.msg
ros2_driver/: CMakeLists.txt  build.sh  env.sh  launch.sh  launch_3d.sh  launch_3d_old.sh  launch_fast_axis.sh  launch_slow.sh  launch_slow_axis.sh  moveit.sh  package.xml  reset.sh  setup.sh  start_ursim.sh  test_goal.py  test_urscript.sh  venv.txt
ros2_driver/bags/bag1/: metadata.yaml
ros2_driver/bags/bag2/: metadata.yaml
ros2_driver/config/: bag_qos.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_calibration.yaml
ros2_driver/connext/: My_QoS_Profiles.xml  dds_config.xml
ros2_driver/docker/: Dockerfile  docker-compose.yaml
ros2_driver/docs/: robot_focal.drawio
ros2_driver/launch/: combined.py  combined_3d.py  combined_3d_nore.py  combined_slow.py  double_axis.py  launch.py  ur_moveit.launch.py
ros2_driver/msg/: Img.msg  Labviewdata.msg  Robotdata.msg
ros2_driver/src/: control_node.cpp  dds_publisher.cpp  dds_subscriber.cpp  dds_subscriber.hpp  double_axis_ctrl.cpp  img_subscriber.cpp  img_subscriber.hpp  joint_state_listener.cpp  joint_state_subscriber.cpp  octa_ctrl.cpp  planning_node.cpp  process_img.cpp  process_img.hpp  pub_custom_int_labview.cpp  pub_labview_data.cpp  pub_robot_data.cpp  reconnect_client.cpp  reconnect_node.cpp  reconnect_node.hpp  reset.cpp  rot_cal.cpp  single_axis_ctrl.cpp  sub_img.cpp  sub_int32_ros.cpp  sub_robot_data.cpp  subscribers.cpp  subscribers.h  test_moveit.cpp  urscript_publisher.cpp  urscript_publisher.hpp  utils.cpp  utils.hpp
ros2_driver/test/: detect_lines.cpp  process_image.py  requirements.txt  test_detect_cpp.sh  test_freedrive.sh
ros2_driver/ur_driver/: build.sh  driver.sh  launch.sh
ros2_driver/urdf/: end_effector.xacro  oct_setup.xacro  ur.urdf.xacro  ur_end_effector.xacro  ur_macro.xacro
ros2_driver/ursim/e-series/programs/: default.installation  default.variables
ros2_driver/windows/: dds_config.xml  port_forward.ps1  wslconfig
scripts/: record.sh  setup.sh
src/: coordinator_node.cpp  dds_publisher.hpp  focus_node.cpp  freedrive_node.cpp  get_robot_state.cpp  img_subscriber.cpp  joint_state_subscriber.hpp  move_z_angle_node.cpp  movezangle_node.cpp  octa_ctrl.cpp  process_img.cpp  process_img.hpp  pub_labview_data.cpp  pub_robot_data.cpp  reconnect_client.cpp  reconnect_node.cpp  reconnect_node.hpp  reset_node.cpp  sub_img.cpp  sub_labview_data.cpp  test_detect.cpp  urscript_publisher.hpp  utils.cpp  utils.hpp
srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
srv/: Activate3Dscan.srv  Deactivate3Dscan.srv  Focus.srv  Scan3d.srv
states/: SSOCT.octcfg
test/: estimate.py  process_image.py  pyrightconfig.json  requirements.txt  test_detect_cpp.sh
urdf/: end_effector.xacro  oct_setup.xacro
utils/: record.sh  ur_build.sh
(+122 files in other folders)
